fix dark mode with proper selector

--- a/src/app/curr-store/store-home/day-view/day-view.component.css
+++ b/src/app/curr-store/store-home/day-view/day-view.component.css
@@ -74,7 +74,7 @@ form {
 }
 
 .info {
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
   border-radius: 50%;
   height: 15px;
   width: 15px;
